--- a/style.css
+++ b/style.css
@@ -146,7 +146,8 @@ a:hover {
 }
 
 input:focus {
-    border: 0.1px solid royalblue;
+    outline: none;
+    border: 2px solid royalblue;
     box-shadow: 0 2px 8px -1px #888888;
 }
 
